[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Enemies/Bee/red-bee.png" type="Texture" id=1]
[ext_resource path="res://Assets/Other/Shadow8x8.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Bee/RedBee.gd" type="Script" id=3]
[ext_resource path="res://Overlap/Hurtboxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/PlayerDetectionZone/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://SFX/HitSound.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/Hitboxes/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Effects/CreateEffectObject.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "fly"
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.0

[sub_resource type="CircleShape2D" id=4]
radius = 176.0

[sub_resource type="CircleShape2D" id=5]
radius = 4.0

[node name="RedBee" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -24 )
hframes = 2
frame = 1

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0.196078 )
texture = ExtResource( 2 )
offset = Vector2( 0, -4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fly"
anims/fly = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -12 )
shape = SubResource( 3 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
self_modulate = Color( 0.482353, 0.588235, 0.239216, 0.380392 )
shape = SubResource( 4 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -22 )
shape = SubResource( 5 )

[node name="CreateEffectObject" parent="." instance=ExtResource( 8 )]

[node name="HitSound" parent="." instance=ExtResource( 6 )]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]
